--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,13 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Production builds
-build/
-dist/
-out/
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
 # Logs
 logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Diagnostic reports
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Runtime data
 pids
@@ -43,60 +15,40 @@ pids
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
 # Dependency directories
+node_modules/
 jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
 
 # Optional npm cache directory
 .npm
 
-# Optional eslint cache
-.eslintcache
+# dotenv environment variable files
+.env
+.env.*
+!.env.example
 
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# CDK asset staging directory
-.cdk.staging
+# AWS CDK artifacts
 cdk.out/
 
-# TypeScript
-*.tsbuildinfo
+# Build artifacts (for React frontend)
+build/
+dist/
 
-# Python
+# Python artifacts
 __pycache__/
-*.py[cod]
-*$py.class
-*.so
+*.pyc
+*.pyo
+*.pyd
 .Python
 env/
 venv/
-ENV/
-env.bak/
-venv.bak/
-.venv
-pip-log.txt
-pip-delete-this-directory.txt
-.pytest_cache/
 
-# React
-.eslintcache
+# OS-specific files
+.DS_Store
 
-# AWS
-.aws-sam/
-
-# Temporary files
-*.tmp
-*.temp
+# IDE and editor directories
+.vscode/
+.idea/
