--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
     "eslint": "^8.0.0",
     "prettier": "^3.0.0",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.883.0",
+    "@aws-sdk/client-ssm": "^3.883.0",
+    "@aws-sdk/util-dynamodb": "^3.883.0",
+    "axios": "^1.11.0"
   }
 }
