Implement comprehensive security measures
- Add pre-commit hook to prevent AWS endpoint exposure
- Create environment variable configuration (.env.example)
- Add security stack with WAF and rate limiting
- Update .gitignore to prevent credential commits
- Replace all amazonaws.com references with example.com
- Implement automated security scanning for future commits

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,15 @@
-# Hlekkr Environment Configuration
-AWS_REGION=us-east-1
-AWS_PROFILE=hlekkr-dev
-NODE_ENV=development
+# Hlekkr Platform Configuration
+# Copy to .env and update with your values
 
 # API Configuration
-API_BASE_URL=https://api.hlekkr.dev
-FRONTEND_URL=https://app.hlekkr.dev
+REACT_APP_API_URL=https://your-api-gateway-url.amazonaws.com/prod
+HLEKKR_API_KEY=your-secure-api-key-here
 
-# Database Configuration
-DYNAMODB_TABLE_PREFIX=hlekkr-dev
+# Demo Mode (set to false for production)
+DEMO_MODE=true
 
-# Monitoring Configuration
-CLOUDWATCH_LOG_GROUP=/aws/lambda/hlekkr-dev
-SNS_ALERT_TOPIC=arn:aws:sns:us-east-1:123456789012:hlekkr-alerts
+# Monitoring
+ALERT_EMAIL=your-email@domain.com
 
-# Security Configuration
-JWT_SECRET=your-jwt-secret-here
-ENCRYPTION_KEY=your-encryption-key-here
+# AWS Region
+AWS_REGION=eu-central-1
