--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,26 +8,28 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^27.5.2",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4",
-    "recharts": "^2.8.0",
-    "styled-components": "^6.1.1",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.7",
+    "amazon-cognito-identity-js": "^6.3.6",
+    "aws-sdk": "^2.1498.0",
     "axios": "^1.6.2",
     "date-fns": "^2.29.3",
     "lucide-react": "^0.294.0",
-    "react-dropzone": "^14.2.3",
-    "aws-sdk": "^2.1498.0",
-    "uuid": "^9.0.1",
-    "@types/uuid": "^9.0.7",
     "mime-types": "^2.1.35",
-    "@types/mime-types": "^2.1.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^7.9.1",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
+    "styled-components": "^6.1.1",
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
